# load-framework

./: .gitignore  Dockerfile.mock  config.py  docker-compose.mock.yml  pyproject.toml  report.html  results_stats.csv  results_stats_history.csv  test_client.py  test_config.py  test_minimal.py  test_post_user.py
.github/workflows/: load-test.yml
docker-stack/: docker-compose.yml
proto/: user.proto
src/clients/: __init__.py  endpoints.py  grpc_client.py  http_client.py
src/grpc_gen/: user_pb2.py  user_pb2_grpc.py
src/locustfiles/: basic_load_test.py  load_with_httpclient.py  load_with_seeding.py  user_flow.py
src/mocks/: grpc_mock_server.py  http_mock.py
src/models/: httpbin.py  user.py
src/seeding/: user_seeder.py
src/utils/: data_generator.py  logger.py
