[project]
name = "load-framework"
version = "0.1.0"
description = "Фреймворк для нагрузочного тестирования"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "faker>=20.0.0",
    "confluent-kafka>=2.3.0",
    "locust>=2.20.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"